<?xml version="1.0"?>
<package format="2">
  <name>mapf_environment</name>
  <version>0.0.0</version>
  <description>The mapf environment package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>visualization_msgs</depend>
  
  <export>

  </export>
</package>